--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,4 @@
-<h1>{{title}}</h1>
+<header>
+    <h1>{{title}}</h1>
+    <app-button color="red" text="+ Tarea" (btnclick)="toggleAddTask()"></app-button>
+</header>
