--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,1 +1,1 @@
-<app-tasks-item *ngFor="let task of tasks" [task]="task">{{task.text}} </app-tasks-item>
+<app-tasks-item *ngFor="let task of tasks" [task]="task" (onDeleteTask)="deleteTask(task)" (onToggleReminder)="toggleReminder(task)"></app-tasks-item>
