--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <header>
     <h1>{{title}}</h1>
-    <app-button color="red" text="+ Tarea" (btnclick)="toggleAddTask()"></app-button>
+    <app-button color="{{showAddTask ? 'red' : 'green'}}" text="{{showAddTask ? '-' : '+'}}" (btnclick)="toggleAddTask()" *ngIf="hasRoute('/')"></app-button>
 </header>
